--- a/src/app/add-cliente/add-cliente.component.html
+++ b/src/app/add-cliente/add-cliente.component.html
@@ -66,7 +66,7 @@
 					<div class="col-9">
 						<label>Correo electrónico</label>
 						<div class="control">
-							<input class="input" type="text" placeholder="ejemplo@ejemplo.com"  formControlName="correo">
+							<input class="input" type="email" placeholder="ejemplo@ejemplo.com"  formControlName="correo">
 						</div>
 					</div>
 				</div>
