--- a/src/app/cliente-detalle/cliente-detalle.component.scss
+++ b/src/app/cliente-detalle/cliente-detalle.component.scss
@@ -49,6 +49,8 @@ ul {
     columns: 2;
     -webkit-columns: 2;
     -moz-columns: 2;
+    border: 1px solid #e3dcdc;
+    border-radius: 2%;
 }
 
 .table{
