--- a/src/app/add-cliente/add-cliente.component.html
+++ b/src/app/add-cliente/add-cliente.component.html
@@ -86,9 +86,15 @@
 	                     		</div>
 	                     	</div>
 	                     	<div class="col-3">
-	                     		<label style="font-size: 14px;">Número/Depto</label>
+	                     		<label style="font-size: 14px;">Número</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="#"  formControlName="Dir_numero">
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-3">
+	                     		<label style="font-size: 14px;">Depto</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="#"  formControlName="Dir_depto">
 	                     		</div>
 	                     	</div>
 	                     	<div class="col-3">
